--- a/src/components/styles/TableLayout.css
+++ b/src/components/styles/TableLayout.css
@@ -1,7 +1,9 @@
 .table_container {
-    max-width: 800px;
+    max-width: 400px;
     margin: auto;
-    background-color: #212529;
+    text-align: left;
+    font-size: small;
+ 
 }
 
 .table_container th {
