--- a/src/components/styles/CrudModal.css
+++ b/src/components/styles/CrudModal.css
@@ -3,8 +3,8 @@
 }
 
 .add-btn {
-    position: absolute;
-    bottom: 10px;
+    position: sticky;
+    bottom: 2%;
     left: 50%;
     transform: translateX(-50%);
 }
