--- a/src/components/styles/TableLayout.css
+++ b/src/components/styles/TableLayout.css
@@ -10,8 +10,18 @@
 
 .list-group {
     margin: 20px;
-    min-width: 300px;
+    max-width: 320px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    transition: .2s;
+}
+
+.list-group-item {
+  max-width: inherit!important;
+}
+
+.list-group:hover{
+  box-shadow: rgba(0, 0, 0, 0.486) 0px 3px 10px;
+  transition: .2s;
 }
 
 .contactList {
@@ -66,11 +76,25 @@
     cursor: pointer;
 }
 
+.job-link {
+  word-wrap: break-word;
+    word-break: break-all;
+    height: 20px;
+    margin: 10px 0px;
+    overflow: hidden;
+}
+
+
+
+
+
+
 
 .scale-out-ver-top {
 	-webkit-animation: scale-out-ver-top 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 	        animation: scale-out-ver-top 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
+
 
 /**
  * ----------------------------------------
