--- a/src/components/styles/TableLayout.css
+++ b/src/components/styles/TableLayout.css
@@ -2,18 +2,50 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin: auto;
+    justify-content: center;
+    margin: 0px 5px;
     text-align: left;
     font-size: small;
     margin-bottom: 65px;
+    gap: 10px;
 }
 
 .list-group {
-    margin: 20px;
+    margin: 0px;
     max-width: 320px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     transition: .2s;
-    height: fit-content !important;
+    width: 100%;
+    height: 65vh;
+    overflow: auto;
+    transition: .2s ease-in-out;
+}
+
+.list-group::-webkit-scrollbar {
+    width: 5px;
+    display: none;
+    transition: .2s ease-in-out;
+    border-radius: 10px;
+}
+.list-group:hover::-webkit-scrollbar {
+  width: 5px;
+  display: block;
+  transition: 1s ease-in-out;
+  border-radius: 10px;
+}
+
+.list-group::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
+}
+
+.list-group::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 0px 10px 10px 0px;
+}
+
+.list-group::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 
 .list-group-item {
