--- a/src/components/styles/TableLayout.css
+++ b/src/components/styles/TableLayout.css
@@ -16,7 +16,7 @@
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     transition: .2s;
     width: 100%;
-    height: 65vh;
+    height: fit-content;
     overflow: auto;
     transition: .2s ease-in-out;
 }
